test/ui/tests/lowering/unacknowledged-internal-attribute.stderr
error[E038]: the attribute `known` is an internal feature
 --> ${TEST_FOLDER}/lowering/unacknowledged-internal-attribute.lushui:3:1
  |
3 | @known
  | ^^^^^^ 
  |

error[E038]: the attribute `known` is an internal feature
 --> ${TEST_FOLDER}/lowering/unacknowledged-internal-attribute.lushui:7:9
  |
7 | @public @known
  |         ^^^^^^ 
  |

error[E038]: the attribute `intrinsic` is an internal feature
  --> ${TEST_FOLDER}/lowering/unacknowledged-internal-attribute.lushui:12:1
   |
12 | @intrinsic
   | ^^^^^^^^^^ 
   |

error: aborting due to 3 previous errors
 note: the error E038 has a detailed explanation
 help: run `lushui explain E038` to view it

